# logic2-automation

c/: CMakeLists.txt
c/.cache/clangd/index/: manager.c.BA225416C98428CF.idx  manager.h.5E88C41664115C06.idx
c/include/saleae/automation/: error.h  manager.h
c/src/saleae/automation/: manager.c
cpp/: CMakeLists
cpp/include/saleae/: automation.hpp
cpp/include/saleae/automation/: errors.hpp  manager.hpp
